# monadify

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: compare.rs
examples/: except_config_loader.rs  except_form_validation.rs  except_order_pipeline.rs  except_safe_calculator.rs  interpreter_full_stack.rs  list_comprehension.rs  reader_config.rs  state_bank_account.rs  state_rng_lcg.rs  state_stack_machine.rs  state_unique_id.rs  validation.rs  writer_audit_log.rs  writer_cost_monoid.rs  writer_eval_trace.rs  writer_listen_censor.rs
monadify-macros/: Cargo.toml
monadify-macros/src/: lib.rs
src/: applicative.rs  apply.rs  do_notation.rs  function.rs  functor.rs  identity.rs  lib.rs  monad.rs  monoid.rs  profunctor.rs  utils.rs
src/kind_based/: kind.rs
src/legacy/: apply.rs  functor.rs  identity.rs
src/transformers/: except.rs  mod.rs  reader.rs  state.rs  trans.rs  writer.rs
tests/: profunctor.rs
tests/kind/: applicative.rs  apply.rs  cfn_clonable.rs  functor.rs  identity.rs  mod.rs  monad.rs  monoid.rs
tests/kind/do_notation/: auto_pure.rs  cfn_unsupported.rs  except.rs  identity.rs  laws.rs  mod.rs  option.rs  reader.rs  result.rs  state.rs  vec.rs  writer.rs
tests/kind/proptest_laws/: applicative.rs  apply.rs  except.rs  functor.rs  mod.rs  monad.rs  rcfn.rs  state.rs  writer.rs
tests/kind/transformers/: except.rs  mod.rs  reader.rs  state.rs  trans.rs  writer.rs
tests/legacy/: applicative.rs  apply.rs  functor.rs  identity.rs  monad.rs
tests/legacy/transformers/: reader_test.rs
