[workspace]
members = [".", "monadify-macros"]
resolver = "2"

[package]
name = "monadify"
description = "A library for functional programming abstractions in Rust, focusing on Monads, Functors, Applicatives, and related concepts."
version = "0.2.0"
authors = ["jarnura"]
edition = "2021"
rust-version = "1.66" # Minimum supported Rust version
license = "MIT"
readme = "README.md"
repository = "https://github.com/jarnura/monadify"
homepage = "https://github.com/jarnura/monadify"
documentation = "https://docs.rs/monadify" # Will be live after publishing to crates.io
keywords = ["functional", "fp", "monad"]
categories = ["rust-patterns"] # Removed "no-std" as std is currently used

[dependencies]
# Default graph stays EMPTY. The macro crate is an OPTIONAL dependency, pulled in
# only by the `do-notation` feature via `dep:` syntax (see [features]).
monadify-macros = { path = "monadify-macros", version = "0.1.1", optional = true }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
proptest = "=1.4.0" # MSRV-1.66 verified; requires Cargo.lock pins (ppv-lite86 0.2.17, tempfile 3.8.1)

[[bench]]
name = "compare"
harness = false

[features]
default = [] # HKT is now the default, no feature needed to enable it.
legacy = []  # Optional feature to include legacy implementations.
# NON-default. Enables the procedural `mdo!` do-notation macro. `dep:` suppresses
# the implicit same-named feature so this is the single switch for the macro crate.
do-notation = ["dep:monadify-macros"]

[[example]]
name = "validation"
required-features = ["do-notation"]

[[example]]
name = "reader_config"
required-features = ["do-notation"]

[[example]]
name = "list_comprehension"
required-features = ["do-notation"]

[[example]]
name = "state_stack_machine"
required-features = ["do-notation"]

[[example]]
name = "state_unique_id"
required-features = ["do-notation"]

[[example]]
name = "state_rng_lcg"
required-features = ["do-notation"]

[[example]]
name = "state_bank_account"
required-features = ["do-notation"]

[[example]]
name = "writer_audit_log"
required-features = ["do-notation"]

[[example]]
name = "writer_cost_monoid"
required-features = ["do-notation"]

[[example]]
name = "writer_listen_censor"
required-features = ["do-notation"]

[[example]]
name = "writer_eval_trace"
required-features = ["do-notation"]

[[example]]
name = "except_form_validation"
required-features = ["do-notation"]

[[example]]
name = "except_safe_calculator"
required-features = ["do-notation"]

[[example]]
name = "except_config_loader"
required-features = ["do-notation"]

[[example]]
name = "except_order_pipeline"
required-features = ["do-notation"]

[[example]]
name = "interpreter_full_stack"
